// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Headline > with drilling on single measure > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [],
      "localIdentifier": "secondary_measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with drilling on single measure > should create expected props for core chart 1`] = `
{
  "drillableItems": [
    [Function],
  ],
  "enableExecutionCancelling": false,
  "exportTitle": "Headline",
  "headlineTransformation": [Function],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with drilling on single measure with underlining disabled > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [],
      "localIdentifier": "secondary_measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with drilling on single measure with underlining disabled > should create expected props for core chart 1`] = `
{
  "config": {
    "disableDrillUnderline": true,
  },
  "drillableItems": [
    [Function],
  ],
  "enableExecutionCancelling": false,
  "exportTitle": "Headline",
  "headlineTransformation": [Function],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with drilling on two measures > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with drilling on two measures > should create expected props for core chart 1`] = `
{
  "drillableItems": [
    [Function],
    [Function],
  ],
  "enableExecutionCancelling": false,
  "exportTitle": "Headline",
  "headlineTransformation": [Function],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with drilling on two measures with underlining disabled > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with drilling on two measures with underlining disabled > should create expected props for core chart 1`] = `
{
  "config": {
    "disableDrillUnderline": true,
  },
  "drillableItems": [
    [Function],
    [Function],
  ],
  "enableExecutionCancelling": false,
  "exportTitle": "Headline",
  "headlineTransformation": [Function],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with drilling on single measure > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [],
      "localIdentifier": "secondary_measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with drilling on single measure > should create expected props for core chart 1`] = `
{
  "drillableItems": [
    [Function],
  ],
  "enableExecutionCancelling": false,
  "exportTitle": "Headline",
  "headlineTransformation": [Function],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with drilling on single measure with underlining disabled > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [],
      "localIdentifier": "secondary_measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with drilling on single measure with underlining disabled > should create expected props for core chart 1`] = `
{
  "config": {
    "disableDrillUnderline": true,
  },
  "drillableItems": [
    [Function],
  ],
  "enableExecutionCancelling": false,
  "exportTitle": "Headline",
  "headlineTransformation": [Function],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with drilling on three measures > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "b4e3e3c7-ead3-4d69-8be4-23bcfe5ff7aa",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_b4e3e3c7_ead3_4d69_8be4_23bcfe5ff7aa",
          },
        },
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "b4e3e3c7-ead3-4d69-8be4-23bcfe5ff7aa",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_b4e3e3c7_ead3_4d69_8be4_23bcfe5ff7aa",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with drilling on three measures > should create expected props for core chart 1`] = `
{
  "drillableItems": [
    [Function],
    [Function],
    [Function],
  ],
  "enableExecutionCancelling": false,
  "exportTitle": "Headline",
  "headlineTransformation": [Function],
  "secondaryMeasures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "b4e3e3c7-ead3-4d69-8be4-23bcfe5ff7aa",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_b4e3e3c7_ead3_4d69_8be4_23bcfe5ff7aa",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
  ],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with drilling on three measures with underlining disabled > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "b4e3e3c7-ead3-4d69-8be4-23bcfe5ff7aa",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_b4e3e3c7_ead3_4d69_8be4_23bcfe5ff7aa",
          },
        },
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "b4e3e3c7-ead3-4d69-8be4-23bcfe5ff7aa",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_b4e3e3c7_ead3_4d69_8be4_23bcfe5ff7aa",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with drilling on three measures with underlining disabled > should create expected props for core chart 1`] = `
{
  "config": {
    "disableDrillUnderline": true,
  },
  "drillableItems": [
    [Function],
    [Function],
    [Function],
  ],
  "enableExecutionCancelling": false,
  "exportTitle": "Headline",
  "headlineTransformation": [Function],
  "secondaryMeasures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "b4e3e3c7-ead3-4d69-8be4-23bcfe5ff7aa",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_b4e3e3c7_ead3_4d69_8be4_23bcfe5ff7aa",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
  ],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with drilling on two measures > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with drilling on two measures > should create expected props for core chart 1`] = `
{
  "config": {
    "comparison": {
      "enabled": false,
    },
  },
  "drillableItems": [
    [Function],
    [Function],
  ],
  "enableExecutionCancelling": false,
  "exportTitle": "Headline",
  "headlineTransformation": [Function],
  "secondaryMeasures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
  ],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with drilling on two measures with underlining disabled > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with drilling on two measures with underlining disabled > should create expected props for core chart 1`] = `
{
  "config": {
    "comparison": {
      "enabled": false,
    },
    "disableDrillUnderline": true,
  },
  "drillableItems": [
    [Function],
    [Function],
  ],
  "enableExecutionCancelling": false,
  "exportTitle": "Headline",
  "headlineTransformation": [Function],
  "secondaryMeasures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
  ],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with only primary measure > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [],
      "localIdentifier": "secondary_measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with only primary measure > should create expected props for core chart 1`] = `
{
  "enableExecutionCancelling": false,
  "exportTitle": "Headline",
  "headlineTransformation": [Function],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with three measures > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "b4e3e3c7-ead3-4d69-8be4-23bcfe5ff7aa",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_b4e3e3c7_ead3_4d69_8be4_23bcfe5ff7aa",
          },
        },
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "b4e3e3c7-ead3-4d69-8be4-23bcfe5ff7aa",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_b4e3e3c7_ead3_4d69_8be4_23bcfe5ff7aa",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with three measures > should create expected props for core chart 1`] = `
{
  "enableExecutionCancelling": false,
  "exportTitle": "Headline",
  "headlineTransformation": [Function],
  "secondaryMeasures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "b4e3e3c7-ead3-4d69-8be4-23bcfe5ff7aa",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_b4e3e3c7_ead3_4d69_8be4_23bcfe5ff7aa",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
  ],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with two measures > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with two measures > should create expected props for core chart 1`] = `
{
  "config": {
    "comparison": {
      "enabled": false,
    },
  },
  "enableExecutionCancelling": false,
  "exportTitle": "Headline",
  "headlineTransformation": [Function],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with two measures one PoP > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "alias": "Won Last Year",
            "definition": {
              "popMeasureDefinition": {
                "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
                "popAttribute": {
                  "identifier": "dt_closedate_timestamp.year",
                  "type": "attribute",
                },
              },
            },
            "localIdentifier": "m_e40a8329_m_e519fa2a_86c3_4e32_8313_0c03062348j3_dt_closedate_timestamp.year",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "alias": "Won Last Year",
        "definition": {
          "popMeasureDefinition": {
            "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
            "popAttribute": {
              "identifier": "dt_closedate_timestamp.year",
              "type": "attribute",
            },
          },
        },
        "localIdentifier": "m_e40a8329_m_e519fa2a_86c3_4e32_8313_0c03062348j3_dt_closedate_timestamp.year",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with two measures one PoP > should create expected props for core chart 1`] = `
{
  "config": {
    "comparison": {
      "enabled": false,
    },
  },
  "enableExecutionCancelling": false,
  "exportTitle": "Headline",
  "headlineTransformation": [Function],
  "secondaryMeasures": [
    {
      "measure": {
        "alias": "Won Last Year",
        "definition": {
          "popMeasureDefinition": {
            "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
            "popAttribute": {
              "identifier": "dt_closedate_timestamp.year",
              "type": "attribute",
            },
          },
        },
        "localIdentifier": "m_e40a8329_m_e519fa2a_86c3_4e32_8313_0c03062348j3_dt_closedate_timestamp.year",
      },
    },
  ],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with two measures with german separators > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with multi measures with two measures with german separators > should create expected props for core chart 1`] = `
{
  "config": {
    "comparison": {
      "enabled": false,
    },
    "separators": {
      "decimal": ",",
      "thousand": ".",
    },
  },
  "enableExecutionCancelling": false,
  "exportTitle": "Headline",
  "headlineTransformation": [Function],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with single measure > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [],
      "localIdentifier": "secondary_measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with single measure > should create expected props for core chart 1`] = `
{
  "enableExecutionCancelling": false,
  "exportTitle": "Headline",
  "headlineTransformation": [Function],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with two measures > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with two measures > should create expected props for core chart 1`] = `
{
  "enableExecutionCancelling": false,
  "exportTitle": "Headline",
  "headlineTransformation": [Function],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with two measures one PoP > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "alias": "Won Last Year",
            "definition": {
              "popMeasureDefinition": {
                "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
                "popAttribute": {
                  "identifier": "dt_closedate_timestamp.year",
                  "type": "attribute",
                },
              },
            },
            "localIdentifier": "m_e40a8329_m_e519fa2a_86c3_4e32_8313_0c03062348j3_dt_closedate_timestamp.year",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "alias": "Won Last Year",
        "definition": {
          "popMeasureDefinition": {
            "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
            "popAttribute": {
              "identifier": "dt_closedate_timestamp.year",
              "type": "attribute",
            },
          },
        },
        "localIdentifier": "m_e40a8329_m_e519fa2a_86c3_4e32_8313_0c03062348j3_dt_closedate_timestamp.year",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with two measures one PoP > should create expected props for core chart 1`] = `
{
  "enableExecutionCancelling": false,
  "exportTitle": "Headline",
  "headlineTransformation": [Function],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with two measures with german separators > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with two measures with german separators > should create expected props for core chart 1`] = `
{
  "config": {
    "separators": {
      "decimal": ",",
      "thousand": ".",
    },
  },
  "enableExecutionCancelling": false,
  "exportTitle": "Headline",
  "headlineTransformation": [Function],
  "workspace": "reference-workspace",
}
`;
